# assistant-ui

./: .gitignore  .oxlintrc.json  AGENTS.md  API_REFERENCE_AUDIT_REPORT.md  CLAUDE.md  CONTRIBUTING.md  LLM.md  MIGRATION_PLAN.md  Makefile  README.md  REASONING_DURATION_ARCHITECTURE.md  REASONING_DURATION_REFACTOR.md  benchmark-results.json  benchmark-results.md  biome.json  composition.mdx  fix-line.js  improve-docs-wiggum.md  package.json  patch.js  plan-memoized-shimmying-pike.md  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  turbo.json
.changeset/: a2a-history-branches.md  a2a-outbound-attachments.md  a2a-v1-wire-compat.md  action-bar-copy-feedback.md  add-react-agent-package.md  add-react-ink-markdown.md  add-use-generative.md  adk-file-part-support.md  ag-ui-cancel-interrupts-append.md  ag-ui-infer-pending-tool-status.md  ag-ui-interrupt-lifecycle.md  ag-ui-shared-interrupt-validation.md  agui-forward-threadlist-adapter.md  agui-grouping.md  agui-reasoning-blocks.md  agui-resume-stream.md  agui-run-failed-finalize.md  artifacts-primitive.md  artifacts-resource-owns-tool-result.md  artifacts.md  attachment-adapters-no-filereader.md  brave-dodos-live.md  breezy-kids-shop.md  bright-clouds-refresh.md  bright-tomatoes-join.md  brown-nails-smile.md  bun-compile-namespace-exports.md  busy-bags-write.md  (+312 more)
python/assistant-transport-backend-django/: .env.example  .gitignore  README.md  manage.py  pyproject.toml  run_server.py  setup.py  setup_venv_fix.py
python/assistant-transport-backend-django/api/: apps.py  models.py  openai_helper.py  views.py
python/assistant-transport-backend-django/assistant_backend/: asgi.py  settings.py  urls.py  wsgi.py
(+2288 files in other folders)
